fixed margin of place__url-sign and changed spacing of place__website

--- a/blocks/place/__url-sign/place__url-sign.css
+++ b/blocks/place/__url-sign/place__url-sign.css
@@ -3,4 +3,5 @@
   letter-spacing: 2px;
   font-size: 12px;
   line-height: 12px;
+  margin: 0;
 }
