--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -4,4 +4,6 @@
   font-size: 18px;
   line-height: 22px;
   text-decoration-line: underline;
+  display: block;
+  margin: 12px auto 0;
 }
